--- a/lib/health/templates/index.hbs
+++ b/lib/health/templates/index.hbs
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Health Check</title>
-    <link rel="stylesheet" href="public/foundation.min.css" />
-    <link rel="stylesheet" href="public/styles.css" />
+    <link rel="stylesheet" href="/public/foundation.min.css" />
+    <link rel="stylesheet" href="/public/styles.css" />
   </head>
   <body>
 
@@ -19,10 +19,10 @@
       <div class="large-12 columns">
         <div class="panel">
           {{#each this}}
-          <h3 class="{{#if isHealthy}}good{{else}}bad{{/if}}">{{recipe}}</h3>
+          <h3><div class="circle {{#if isHealthy}}good{{else}}bad{{/if}}"></div>{{recipe}}</h3>
           <ul class="failures">
-            {{#each failures}}
-            <li>{{this}}</li>
+            {{#each productChecks.failures}}
+            <li>{{json this}}</li>
             {{/each}}
           </ul>
           {{/each}}
